infra/k8s/expiration-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-service
  template:
    metadata:
      labels:
        app: expiration-service
    spec:
      containers:
        - name: expiration-service
          image: ajayjb/expiration-service:latest
