infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
        - name: mongo-auth
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-srv
spec:
  type: ClusterIP
  selector:
    app: mongo-auth
  ports:
    - name: mongo-auth-srv-port
      protocol: TCP
      port: 27017
      targetPort: 27017
