infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments
  template:
    metadata:
      labels:
        app: ticketing-payments
    spec:
      containers:
        - name: ticketing-payments
          image: ajayjb/ticketing-payments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-payments
  ports:
    - name: ticketing-payments-srv-port
      protocol: TCP
      port: 6000
      targetPort: 6000
