infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.com
      http:
        paths:
          - path: "/auth/health"
            pathType: Exact
            backend:
              service:
                name: ticketing-auth-srv
                port:
                  number: 6000
